create endpoints and have every post endpoint create a contact
