# controllers/contacts.js
@@ -33,6 +33,18 @@ const getSingle = async (req, res) => {
     }  
 };
 
+const insertContact = async (contactData) => {
+    try {
+        const response = await mongodb.getDatabase().db().collection('contacts').insertOne(contactData);
+        if (!response.acknowledged) {
+            throw new Error('Some error occurred while creating the contact');
+        }
+    } catch (error) {
+        console.error('Error in insertContact:', error.message);
+        throw error; // Re-throw the error to handle it in the calling function
+    }
+};
+
 const createContact = async (req, res) => {
     //#swagger.tags=['Contacts']
     try {
@@ -42,12 +54,8 @@ const createContact = async (req, res) => {
             email: req.body.email,
             type: req.body.type,
         };
-        const response = await mongodb.getDatabase().db().collection('contacts').insertOne(contact);
-        if (response.acknowledged) {
-            res.status(204).send();
-        } else {
-            res.status(500).json(response.error || 'Some error ocurred while updating the user');
-        }
+        await insertContact(contact);
+        res.status(204).send();
     } catch (error) {
         console.error(error.message);
         res.status(500).json({ message: 'Some error occurred while creating the contact' });
@@ -92,11 +100,26 @@ const deleteContact = async(req, res) => {
     }
 };
 
+const findByType = async (req, res) => {
+    //#swagger.tags=['Contacts']
+    try {
+        const type = req.params.type;
+        const query = { type: type }; // Create a query object based on type field being a string
+        const result = await mongodb.getDatabase().db().collection('contacts').find(query).toArray();
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(result);
+    } catch (error) {
+        console.error(error.message);
+        res.status(500).json({ message: 'Some error occurred while retrieving the contacts' });
+    }
+};
 
 module.exports = {
     getAll,
     getSingle,
     createContact,
+    insertContact,
     updateContact,
-    deleteContact
+    deleteContact,
+    findByType
 };
