# controllers/employees.js
@@ -1,6 +1,7 @@
 //const { application } = require('express');
 const mongodb = require('../data/database');
-const ObjetcId = require('mongodb').ObjectId;
+const { insertContact } = require('./contacts');
+const ObjectId = require('mongodb').ObjectId;
 
 
 // Functions for Employees
@@ -33,6 +34,21 @@ const getSingle = async (req, res) => {
     }  
 };
 
+const findByDepartment = async (req, res) => {
+    //#swagger.tags=['Employees']
+    try {
+        const department = req.params.department;
+        const query = { department: department }; // Create a query object based on type field being a string
+        console.log(query)
+        const result = await mongodb.getDatabase().db().collection('employees').find(query).toArray();
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(result);
+    } catch (error) {
+        console.error(error.message);
+        res.status(500).json({ message: 'Some error occurred while retrieving the employees' });
+    }
+};
+
 const createEmployee = async (req, res) => {
     //#swagger.tags=['Employees']
     try {
@@ -45,6 +61,15 @@ const createEmployee = async (req, res) => {
         };
         const response = await mongodb.getDatabase().db().collection('employees').insertOne(employee);
         if (response.acknowledged) {
+            const contact = {
+                body: {
+                    name: employee.name,
+                    phone: employee.phone,
+                    email: employee.email,
+                    type: 'employee',
+                }
+            };
+            await insertContact(contact);
             res.status(204).send();
         } else {
             res.status(500).json(response.error || 'Some error ocurred while updating the employee');
@@ -58,7 +83,7 @@ const createEmployee = async (req, res) => {
 const updateEmployee = async (req, res) => {
     //#swagger.tags=['Employees']
     try {
-        const userId = new ObjetcId(req.params.id);
+        const userId = new ObjectId(req.params.id);
         const employee = {
             name: req.body.name,
             phone: req.body.phone,   
@@ -67,6 +92,23 @@ const updateEmployee = async (req, res) => {
             department: req.body.department,
         };
         const response = await mongodb.getDatabase().db().collection('employees').replaceOne({ _id: userId}, employee);
+        if (response.modifiedCount > 0) {
+            res.status(204).send();
+        } else {
+            res.status(500).json(response.error || 'Some error ocurred while updating the employee');
+        }
+    } catch (error) {
+        console.error(error.message);
+        res.status(500).json({ message: 'Some error occurred while updating the employee' });
+    }
+};
+
+const updateEmployeeDepartment = async(req, res) => {
+    //#swagger.tags=['Employees']
+    try {
+        const userId = new ObjectId(req.params.id);
+        const update = {$set: { department: req.body.department }};
+        const response = await mongodb.getDatabase().db().collection('employees').updateOne({ _id: userId }, update);
         if (response.modifiedCount > 0) {
             res.status(204).send();
         } else {
@@ -98,7 +140,9 @@ const deleteEmployee = async(req, res) => {
 module.exports = {
     getAll,
     getSingle,
+    findByDepartment,
     createEmployee,
     updateEmployee,
+    updateEmployeeDepartment,
     deleteEmployee
 };
