# routes/contacts.js
@@ -7,6 +7,7 @@ const contactsController = require('../controllers/contacts');
 
 router.get('/', contactsController.getAll);
 router.get('/:id', contactsController.getSingle);
+router.get('/type/:type/', contactsController.findByType);
 router.post('/', contactsController.createContact);
 router.put('/:id', contactsController.updateContact);
 router.delete('/:id', contactsController.deleteContact);
